tests/error/invalid_for.gw
// [contains] in 'for' condition
for(;NULL;);
